tests/parse-fail/fn_missing_ret.fl.0.exp
Error: fn_missing_ret.fl(3,21): Expected return type arrow, but got ';' 
pub mod fn_missing_ret {
    pub struct FnMissingRet {
        pub f : fn();
                    ^ 
    }
}
